--- a/Scrapping Link 1.ipynb
+++ b/Scrapping Link 1.ipynb
@@ -269,23 +269,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Contact</th>\n",
+       "      <th>Full Address</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Pincode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>New York Stock Exchange</td>\n",
+       "      <td>New York, United States</td>\n",
+       "      <td>+1 212-896-2830</td>\n",
+       "      <td>[11 Wall Street, New York, NY 10005]</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>10005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NASDAQ Stock Exchange</td>\n",
+       "      <td>New York, United States</td>\n",
+       "      <td>+1 212-401-8700</td>\n",
+       "      <td>[One Liberty Plaza, 165 Broadway, New York, NY...</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>10006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>London Stock Exchange</td>\n",
+       "      <td>London, United Kingdom</td>\n",
+       "      <td>+44 20 7797 4400</td>\n",
+       "      <td>[10 Paternoster Square, London, EC4M 7LS]</td>\n",
+       "      <td>London</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tokyo Stock Exchange</td>\n",
+       "      <td>Tokyo, Japan</td>\n",
+       "      <td>+81 3-3666-1361</td>\n",
+       "      <td>[2-1 Nihombashi Kabutocho, Chuo-ku, Tokyo 103-...</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>8224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shanghai Stock Exchange</td>\n",
+       "      <td>Shanghai, China</td>\n",
+       "      <td>+86 21 6880 8888</td>\n",
+       "      <td>[China, Shanghai Shi, Pudong Xinqu, Lu Jia Zui...</td>\n",
+       "      <td>Shanghai</td>\n",
+       "      <td>China</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>Sydney Stock Exchange</td>\n",
+       "      <td>Sydney, Australia</td>\n",
+       "      <td>+61 2 9217 2730</td>\n",
+       "      <td>[Level 41, 259 George Street, Sydney NSW 2000]</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>Belarusian Currency and Stock Exchange</td>\n",
+       "      <td>Minsk, Belarus</td>\n",
+       "      <td>+375 17 309-33-22</td>\n",
+       "      <td>[48a,Surganova str., 220013 Minsk, Belarus]</td>\n",
+       "      <td>Minsk</td>\n",
+       "      <td>Belarus</td>\n",
+       "      <td>220013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>Korea Exchange (KOSDAQ)</td>\n",
+       "      <td>Seoul, South Korea</td>\n",
+       "      <td>+82 1577-0088</td>\n",
+       "      <td>[76, Yeouinaru-ro, Yeongdeungpo-gu, Seoul]</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>Regional Securities Exchange SA</td>\n",
+       "      <td>Abidjan, Ivory Coast</td>\n",
+       "      <td>+225 20 32 66 84</td>\n",
+       "      <td>[BRVM - Regional Stock Exchange, 18, Rue Josep...</td>\n",
+       "      <td>Abidjan</td>\n",
+       "      <td>Ivory Coast</td>\n",
+       "      <td>3802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>Iran Fara Bourse</td>\n",
+       "      <td>Tehran, Iran</td>\n",
+       "      <td>+98 21 4215 0226</td>\n",
+       "      <td>[Tehran Province, Tehran, No. 1, North Didar S...</td>\n",
+       "      <td>Tehran</td>\n",
+       "      <td>Iran</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(5, 4)"
+       "                                       Name                  Address  \\\n",
+       "0                   New York Stock Exchange  New York, United States   \n",
+       "1                     NASDAQ Stock Exchange  New York, United States   \n",
+       "2                     London Stock Exchange   London, United Kingdom   \n",
+       "3                      Tokyo Stock Exchange             Tokyo, Japan   \n",
+       "4                   Shanghai Stock Exchange          Shanghai, China   \n",
+       "..                                      ...                      ...   \n",
+       "139                   Sydney Stock Exchange        Sydney, Australia   \n",
+       "140  Belarusian Currency and Stock Exchange           Minsk, Belarus   \n",
+       "141                 Korea Exchange (KOSDAQ)       Seoul, South Korea   \n",
+       "142         Regional Securities Exchange SA     Abidjan, Ivory Coast   \n",
+       "143                        Iran Fara Bourse             Tehran, Iran   \n",
+       "\n",
+       "               Contact                                       Full Address  \\\n",
+       "0      +1 212-896-2830               [11 Wall Street, New York, NY 10005]   \n",
+       "1      +1 212-401-8700  [One Liberty Plaza, 165 Broadway, New York, NY...   \n",
+       "2     +44 20 7797 4400          [10 Paternoster Square, London, EC4M 7LS]   \n",
+       "3      +81 3-3666-1361  [2-1 Nihombashi Kabutocho, Chuo-ku, Tokyo 103-...   \n",
+       "4     +86 21 6880 8888  [China, Shanghai Shi, Pudong Xinqu, Lu Jia Zui...   \n",
+       "..                 ...                                                ...   \n",
+       "139    +61 2 9217 2730     [Level 41, 259 George Street, Sydney NSW 2000]   \n",
+       "140  +375 17 309-33-22        [48a,Surganova str., 220013 Minsk, Belarus]   \n",
+       "141      +82 1577-0088         [76, Yeouinaru-ro, Yeongdeungpo-gu, Seoul]   \n",
+       "142   +225 20 32 66 84  [BRVM - Regional Stock Exchange, 18, Rue Josep...   \n",
+       "143   +98 21 4215 0226  [Tehran Province, Tehran, No. 1, North Didar S...   \n",
+       "\n",
+       "        State          Country Pincode  \n",
+       "0    New York    United States   10005  \n",
+       "1    New York    United States   10006  \n",
+       "2      London   United Kingdom    None  \n",
+       "3       Tokyo            Japan    8224  \n",
+       "4    Shanghai            China    None  \n",
+       "..        ...              ...     ...  \n",
+       "139    Sydney        Australia    2000  \n",
+       "140     Minsk          Belarus  220013  \n",
+       "141     Seoul      South Korea    None  \n",
+       "142   Abidjan      Ivory Coast    3802  \n",
+       "143    Tehran             Iran    None  \n",
+       "\n",
+       "[144 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import re\n",
-    "df['Full Address'].apply(lambda x : len(re.split(',', x[0]))).max(), df['Full Address'].apply(lambda x : len(x)).max()"
+    "# Getting details from Address\n",
+    "# Assumption : PIN COde is atleast 3 digits\n",
+    "def get_pincode(text):\n",
+    "    a = re.findall(\"[1-9][0-9][0-9][0-9]+\", text[-1])\n",
+    "    if(len(a)): return a[0]\n",
+    "    \n",
+    "df['State'] = df['Address'].apply(lambda x : re.split(',', x)[0])\n",
+    "df['Country'] = df['Address'].apply(lambda x : re.split(',', x)[-1])\n",
+    "df['Pincode'] = df['Full Address'].apply(lambda x : get_pincode(x))\n",
+    "\n",
+    "df.to_csv(\"trading_hours_exchanges.csv\")\n",
+    "df"
    ]
   },
   {
