--- a/Scrapping Link 4.ipynb
+++ b/Scrapping Link 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_data_from_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +117,8 @@
        "      <td>251118791</td>\n",
        "      <td>19402</td>\n",
        "      <td>AIG Property Casualty Company</td>\n",
-       "      <td>HARRISBURG</td>\n",
-       "      <td>PA</td>\n",
+       "      <td>CHICAGO</td>\n",
+       "      <td>IL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -144,7 +153,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
+       "      <th>64</th>\n",
        "      <td>363703200</td>\n",
        "      <td>38130</td>\n",
        "      <td>Travelers Personal Insurance Company</td>\n",
@@ -152,7 +161,7 @@
        "      <td>CT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
+       "      <th>65</th>\n",
        "      <td>592174734</td>\n",
        "      <td>41211</td>\n",
        "      <td>TRITON INSURANCE COMPANY</td>\n",
@@ -160,7 +169,7 @@
        "      <td>TX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <th>66</th>\n",
        "      <td>61184984</td>\n",
        "      <td>27120</td>\n",
        "      <td>Trumbull Insurance Company</td>\n",
@@ -168,7 +177,7 @@
        "      <td>CT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
+       "      <th>67</th>\n",
        "      <td>60732738</td>\n",
        "      <td>29459</td>\n",
        "      <td>Twin City Fire Insurance Company</td>\n",
@@ -176,7 +185,7 @@
        "      <td>IN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
+       "      <th>68</th>\n",
        "      <td>916027360</td>\n",
        "      <td>25747</td>\n",
        "      <td>Unigard Insurance Company</td>\n",
@@ -185,7 +194,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>74 rows × 5 columns</p>\n",
+       "<p>69 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -196,35 +205,36 @@
        "3   954387273  19489  Allied World Assurance Company (U.S.) Inc.   \n",
        "4    20493244  10690     Allied World National Assurance Company   \n",
        "..        ...    ...                                         ...   \n",
-       "69  363703200  38130        Travelers Personal Insurance Company   \n",
-       "70  592174734  41211                    TRITON INSURANCE COMPANY   \n",
-       "71   61184984  27120                  Trumbull Insurance Company   \n",
-       "72   60732738  29459            Twin City Fire Insurance Company   \n",
-       "73  916027360  25747                   Unigard Insurance Company   \n",
+       "64  363703200  38130        Travelers Personal Insurance Company   \n",
+       "65  592174734  41211                    TRITON INSURANCE COMPANY   \n",
+       "66   61184984  27120                  Trumbull Insurance Company   \n",
+       "67   60732738  29459            Twin City Fire Insurance Company   \n",
+       "68  916027360  25747                   Unigard Insurance Company   \n",
        "\n",
        "            City State  \n",
        "0       Johnston    RI  \n",
-       "1     HARRISBURG    PA  \n",
+       "1        CHICAGO    IL  \n",
        "2       PETALUMA    CA  \n",
        "3     WILMINGTON    DE  \n",
        "4        CONCORD    NH  \n",
        "..           ...   ...  \n",
-       "69      HARTFORD    CT  \n",
-       "70    Fort Worth    TX  \n",
-       "71      Hartford    CT  \n",
-       "72  Indianapolis    IN  \n",
-       "73   Sun Prairie    WI  \n",
+       "64      HARTFORD    CT  \n",
+       "65    Fort Worth    TX  \n",
+       "66      Hartford    CT  \n",
+       "67  Indianapolis    IN  \n",
+       "68   Sun Prairie    WI  \n",
        "\n",
-       "[74 rows x 5 columns]"
+       "[69 rows x 5 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_data_from_table()"
+    "df.to_csv(\"list_admitted_reinsurers.csv\")\n",
+    "df"
    ]
   },
   {
