--- a/federal register.ipynb
+++ b/federal register.ipynb
@@ -62,18 +62,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = final_data(url)\n",
-    "# df\n",
-    "# Note: HANDLE PREVIOUSLY CALLED ______ "
+    "df = final_data(url)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name of Org</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Absentee-Shawnee Tribe of Indians of Oklahoma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Agua Caliente Band of Cahuilla Indians of the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ak-Chin Indian Community (previously listed as...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama-Coushatta Tribe of Texas (previously l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama-Quassarte Tribal Town</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>Village of Venetie (See Native Village of Vene...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>Village of Wainwright</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>573</th>\n",
+       "      <td>Wrangell Cooperative Association</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>Yakutat Tlingit Tribe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>575</th>\n",
+       "      <td>Yupiit of Andreafski</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>576 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Name of Org\n",
+       "0        Absentee-Shawnee Tribe of Indians of Oklahoma\n",
+       "1    Agua Caliente Band of Cahuilla Indians of the ...\n",
+       "2    Ak-Chin Indian Community (previously listed as...\n",
+       "3    Alabama-Coushatta Tribe of Texas (previously l...\n",
+       "4                        Alabama-Quassarte Tribal Town\n",
+       "..                                                 ...\n",
+       "571  Village of Venetie (See Native Village of Vene...\n",
+       "572                              Village of Wainwright\n",
+       "573                   Wrangell Cooperative Association\n",
+       "574                              Yakutat Tlingit Tribe\n",
+       "575                               Yupiit of Andreafski\n",
+       "\n",
+       "[576 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.to_csv(\"federal_register.csv\")"
+    "df.to_csv(\"federal_register.csv\")\n",
+    "df"
    ]
   },
   {
